# info-panel

./: CMakeLists.txt  brightness.cpp  brightness.h  config.cpp  config.h  dbusListener.cpp  dbusListener.h  dbustest.cpp  dbustest.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
